--- a/src/main/resources/index/transaction.html
+++ b/src/main/resources/index/transaction.html
@@ -24,13 +24,13 @@
                     <navbar onclick="window.location.href ='schooolemploy.html'">产品价格</navbar>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">卖方信息</a>
+                    <button onclick="nav-link " >卖方信息</button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">产品信息</a>
+                    <button onclick="nav-link " >产品信息 </button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">我的</a>
+                    <button onclick="nav-link " >我的</button>
                 </li>
             </ul>
         </div>
@@ -46,5 +46,30 @@
 </div>
 <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
 <script src="/js/index.js"></script>
+
+<div class="chanpin">
+    <div class="yy-title"><a href="transaction.html"><h1>产品信息</h1></a></div>
+    <div class="ms">
+        <ul>
+            <a href="#">
+                <li><img src="/static/image/1.jpg" />
+                    <p>电视机</p>
+
+                </li>
+            </a>
+            <a href="#">
+                <li><img src="/static/image/2.jpg" />
+                    <p>电磁炉</p>
+
+                </li>
+            </a>
+
+            <a href="#">
+                <li><img src="/static/image/3.jpg" />
+                    <p>吹风机</p>
+                </li>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
