--- a/src/main/resources/index/question.html
+++ b/src/main/resources/index/question.html
@@ -21,7 +21,6 @@
                 <li class="nav-item">
                     <navbar onclick="window.location.href ='index.html'">首页</navbar>
                 </li>
-
             </ul>
         </div>
     </div>
@@ -31,8 +30,8 @@
 
     <div class="p-3 mb-3 bg-light rounded row justify-content-center">
         <button type="button" class="btn btn-outline-primary mx-2 mb-2 active" data-toggle="list" href="#all" role="tab" aria-controls="all">全部</button>
-        <button type="button" class="btn btn-outline-primary mx-2 mb-2 " data-toggle="list" href="#part-time" role="tab" aria-controls="part-time">兼职</button>
-        <button type="button" class="btn btn-outline-primary mx-2 mb-2 " data-toggle="list" href="#tutor" role="tab" aria-controls="tutor">家教</button>
+        <button type="button" class="btn btn-outline-primary mx-2 mb-2 " data-toggle="list" href="#part-time" role="tab" aria-controls="part-time">问题</button>
+        <button type="button" class="btn btn-outline-primary mx-2 mb-2 " data-toggle="list" href="#tutor" role="tab" aria-controls="tutor">回答</button>
         <button type="button" class="btn btn-outline-primary mx-2 mb-2 " data-toggle="list" href="#others" role="tab" aria-controls="others">其他</button>
     </div>
 
