--- a/src/main/resources/index/transaction.html
+++ b/src/main/resources/index/transaction.html
@@ -53,20 +53,18 @@
         <ul>
             <a href="#">
                 <li><img src="/static/image/1.jpg" />
-                    <p>电视机</p>
-
+                    <p style="text-align: center" >电视机</p>
                 </li>
             </a>
             <a href="#">
                 <li><img src="/static/image/2.jpg" />
-                    <p>电磁炉</p>
+                    <p style="text-align: center" >电磁炉</p>
 
                 </li>
             </a>
-
             <a href="#">
                 <li><img src="/static/image/3.jpg" />
-                    <p>吹风机</p>
+                    <p style="text-align: center" >吹风机</p>
                 </li>
         </ul>
     </div>
