--- a/src/main/resources/index/lostFound.html
+++ b/src/main/resources/index/lostFound.html
@@ -1,56 +1,195 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>校园失物招领平台</title>
-    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/index.css">
-</head>
-<body>
-<nav class="navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">校园失物招领平台</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><HTML><HEAD><TITLE>失物招领</TITLE><META Name="keywords" Content="失物招领" />
 
-                    <navbar onclick="window.location.href ='navigate.html'">丢失物品</navbar>
-                </li>
-                <li class="nav-item">
-                    <navbar onclick="window.location.href ='schooolemploy.html'">捡到物品</navbar>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">拾到者信息</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">物品信息</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">拾到物品照片</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">拾到物品描述</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">我的</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<div class="container my-5">
-    <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="搜索" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">搜索</button>
-    </form>
-    <h1>欢迎使用校园失物招领平台</h1>
-    <button class="btn btn-primary">点击这里返回首页</button>
-</div>
-<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
-<script src="/js/index.js"></script>
-</body>
+
+
+
+
+    <META content="text/html; charset=UTF-8" http-equiv="Content-Type"><LINK rel="stylesheet" type="text/css" href="style/css.css">
+    <STYLE type="text/css">
+        <!--
+        .STYLE1 {font-weight: bold;}
+        .style6 {color: #003399;}
+        -->
+    </STYLE>
+
+
+    </LINK><!--Announced by Visual SiteBuilder 9-->
+    <link rel="stylesheet" type="text/css" href="_sitegray/_sitegray_d.css" />
+    <script language="javascript" src="_sitegray/_sitegray.js"></script>
+    <!-- CustomerNO:77656262657232307668475153515742000200014152 -->
+    <link rel="stylesheet" type="text/css" href="list.vsb.css" />
+    <script type="text/javascript" src="/system/resource/js/counter.js"></script>
+    <script type="text/javascript">_jsq_(1046,'/list.jsp',-1,1264505612)</script>
+</HEAD>
+<BODY>
+<TABLE height="74" cellspacing="0" cellpadding="0" width="980" align="center" border="0">
+    <TBODY>
+    <TR>
+        <TD width="406" align="center">
+            <table border="0" cellspacing="0" cellpadding="0"><tr><td><a href="" title="保卫处" alt="网站LOGO"><img src="images/logo.png" border="0" alt="保卫处" title="保卫处"></a></td></tr></table></TD>
+        <TD background="images/top.jpg" width="574" align="center">
+            <TABLE cellspacing="0" cellpadding="0" width="499" border="0">
+                <TBODY>
+                <TR>
+                    <TD height="41">&nbsp;</TD></TR>
+                <TR>
+                    <TD align="right"><script language="javascript" src="/system/resource/js/calendar/simple.js"></script>
+                        <script language="JavaScript">
+                            //阳历
+                            var c_Calendar37700EnDateString;
+
+                            var c_Calendar37700WeekDayString;
+
+                            //阴历
+                            var c_Calendar37700CnDateString;
+                            //节气
+                            var c_Calendar37700JQString;
+                            //年
+                            var c_Calendar37700YearString;
+                            //月
+                            var c_Calendar37700MonthString;
+                            //日
+                            var c_Calendar37700DayString;
+                            //周
+                            var c_Calendar37700WeekString;
+                            //显示
+                            var c_Calendar37700ShowString;
+                            function RunGLNL37700()
+                            {
+                                var  sc =new Simple_Calendar ();
+                                sc.init();
+                                c_Calendar37700CnDateString=sc.getCnDateString();
+                                c_Calendar37700WeekDayString=sc.getCalendarWeekString();
+                                c_Calendar37700JQString=sc.getJQString();
+                                c_Calendar37700EnDateString=sc.getEnDateString();
+                                c_Calendar37700YearString=sc.getYearString();
+                                c_Calendar37700MonthString=sc.getMonthString();
+                                c_Calendar37700DayString=sc.getDayString();
+                                c_Calendar37700WeekString=sc.getWeekString();
+                                c_Calendar37700ShowString= "";
+                            }
+                            RunGLNL37700();
+
+                            c_Calendar37700ShowString+=c_Calendar37700EnDateString;
+                            c_Calendar37700ShowString+="&nbsp;&nbsp;"+c_Calendar37700WeekDayString;
+
+
+
+                        </script>
+                        <div id="c_lunar37700" class="fontstyle37700"></div>
+                        <script>
+                            document.getElementById("c_lunar37700").innerHTML = c_Calendar37700ShowString;
+                        </script>
+                    </TD></TR></TBODY></TABLE></TD></TR></TBODY></TABLE>
+<TABLE cellspacing="0" cellpadding="0" width="980" align="center" border="0">
+    <TBODY>
+    <TR>
+        <TD background="images/dh.jpg" align="center">    <a href="index.jsp" title="首页" style="FONT-SIZE: 11pt; TEXT-DECORATION: none; FONT-WEIGHT: bold; COLOR: #ffffff; PADDING-LEFT: 2px; MARGIN-LEFT: 2px; LETTER-SPACING: 1px; LINE-HEIGHT: 32px; PADDING-RIGHT:2px; MARGIN-RIGHT: 2px;dispaly:block;height:34px;">首页</a>
+            <span style="color:#fff;font-size:14px;">|</span>
+        </TD></TR></TBODY></TABLE>
+<TABLE height="26" cellspacing="0" cellpadding="0" width="980" align="center" border="0">
+    <TBODY>
+    <TR>
+        <TD class="wz" style="text-align: left">
+            <table class="winstyle37708" cellspacing="0" cellpadding="0"><tr><td nowrap>当前位置：
+                <a href="index.jsp"><span class="fontstyle37708">首页</span></a><span class="splitflagstyle37708">>></span><a href="swzl.htm"><span class="fontstyle37708">失物招领</span></a></td></tr></table></TD></TR></TBODY></TABLE>
+<TABLE cellspacing="0" cellpadding="0" width="980" align="center" bgcolor="#ffffff" border="0">
+    <TBODY>
+    <TR>
+        <TD bgcolor="#e7f1fb" height="125" valign="top" width="220">
+            <DIV class="left">
+                <UL>
+                    <LI><style type="text/css">
+                        td.b1_4_{FONT-SIZE:9pt;}
+                        td.b2_4_{FONT-SIZE:9pt;}
+                        td.b3_4_{FONT-SIZE:9pt;BACKGROUND-COLOR: #eff8fe;}
+                        td.b4_4_{FONT-SIZE:9pt;BACKGROUND-COLOR: #e8f0fb;}
+                        a.menu0_4_:link {TEXT-DECORATION: none;};
+                        a.menu0_4_:visited { TEXT-DECORATION: none;};
+                        a.menu0_4_:hover {TEXT-DECORATION: none;};
+                        a.menu0_4_:active {TEXT-DECORATION: none;};
+                        table.tb1_4_{FONT-SIZE:9pt;border:0;}
+                        span.s1_4_{LINE-HEIGHT: 30px;COLOR: #ffffff;FONT-SIZE: 10pt;TEXT-DECORATION: none;}
+                        span.s2_4_{LINE-HEIGHT: 160%;COLOR: #ffffff;FONT-SIZE: 9pt;}
+                        span.s10_4_{LINE-HEIGHT: 30px;COLOR: #002b55;FONT-SIZE: 10pt;}
+                        span.s20_4_{LINE-HEIGHT: 160%;COLOR: #002b55;FONT-SIZE: 9pt;}
+                    </style>
+                        <SCRIPT language="javascript">
+                            var showfix_4_ = 1;
+                            var isvertical_4_ = true;
+                        </SCRIPT>
+                        <script language="javascript" src="/system/resource/js/menu/text.js"></script>
+                        <TABLE id="t1_4_" cellSpacing="0" cellPadding="0" border="0" height="0" width="0"><TR><TD valign="middle" height="0" width="0" class="b1_4_" align="left" id="a_4_1046" onmouseover="tshowLayers('1046','b2_4_', '_4_')" onmouseout="thideLayers('1046','b1_4_', '_4_','true')"> <a class="menu0_4_" href="swzl.htm"><span class="fontstyle37711">&nbsp;失物招领&nbsp;</span></a></TD></tr></table></A></LI></UL></DIV></TD>
+        <TD valign="top" width="764" colspan="5">
+            <TABLE cellspacing="0" cellpadding="0" width="764" align="center" border="0">
+                <TBODY>
+                <TR>
+                    <TD align="right"></TD></TR></TBODY></TABLE>
+            <TABLE height="47" cellspacing="0" cellpadding="0" width="733" align="center" border="0">
+                <TBODY>
+                <TR>
+                    <TD height="47" valign="middle" width="724">
+                        <P class="title"><STRONG><FONT size="3" face="Times New Roman"><span class="windowstyle37716">
+失物招领</span></FONT></STRONG></P></TD></TR></TBODY></TABLE>
+            <TABLE cellspacing="0" cellpadding="0" width="723" align="center" border="0">
+                <TBODY>
+                <TR>
+                    <TD>
+
+
+                        <style>
+                            A.f125955:link{COLOR: #222222;}
+                            A.f125955:visited{COLOR: #222222;}
+                            A.f125955:active{COLOR: #222222;}
+                            A.f125955:hover{COLOR: #cc0000;}
+                        </style>
+                        <INPUT TYPE="hidden" NAME="actiontype" VALUE=""><input type="hidden" name="_scode_" value="1682007591551"><input type="hidden" name="urltype" value="tree.TreeTempUrl"><input type="hidden" name="wbtreeid" value="1046"><input type="hidden" name="outFlag" value="false">
+                        <style type="text/css">
+                            .headStyle10f5gsgmoj, .headStyle10f5gsgmoj td, .headStyle10f5gsgmoj div {font-size: 12px;font-family:宋体; color: #000000; margin-left: auto; margin-right: auto; line-height:14px;}
+                            .defaultButtonStyle {font-size: 12px;font-family:宋体; height:20px;color: #000000;BORDER: #AFD5F5 1px solid; margin: 0px;padding: 0px; FILTER:progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=#ffffff, EndColorStr=#BDDBF7);  CURSOR: pointer; line-height:14px;background:-webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#BDDBF7));background: -moz-linear-gradient( top,#ffffff,#BDDBF7);background:-ms-linear-gradient(top,#ffffff 0%,#bddbf7 100%);}
+                            .defaultinputStyle {font-size: 12px;font-family:宋体; height:20px; border:1px solid #AFD5F5; line-height:14px;}
+                            .colHeader {font-size: 12px;font-family:宋体; line-height:14px;}
+                            .headStyle10f5gsgmoj a, .pageList .this-page {font-size: 12px;font-family:宋体; display:inline-block; height:14px; padding: 2px 4px; border: solid 1px #AFD5F5; background: #fff; text-decoration: none; MARGIN-RIGHT: 1px;line-height:14px;}
+                            .headStyle10f5gsgmoj a:visited {font-size: 12px;font-family:宋体; color: #000000; text-decoration: none; line-height:14px;}
+                            .headStyle10f5gsgmoj .PrevDisabled {font-size: 12px;font-family:宋体; display:inline-block;height:14px;  margin-right: 3px; padding: 2px 4px; background: #fff;color:#ccc;border: solid 1px #AFD5F5; line-height:14px;}
+                            .headStyle10f5gsgmoj .SelectList {font-size: 12px;font-family:宋体;line-height:14px;}
+                            .headStyle10f5gsgmoj .Prev { font-size: 12px;font-family:宋体; margin-right: 3px; padding: 2px 4px;line-height:14px;}
+                            .headStyle10f5gsgmoj .break {font-size: 12px;font-family:宋体; border: none; text-decoration: none; line-height:14px;}
+                            .headStyle10f5gsgmoj .NextDisabled { font-size: 12px;font-family:宋体;display:inline-block; height:14px; margin-left: 2px; padding: 2px 4px;background: #fff;color:#ccc;border: solid 1px #AFD5F5; line-height:14px;}
+                            .headStyle10f5gsgmoj .Next { font-size: 12px;font-family:宋体; margin-left: 2px; padding: 2px 4px;line-height:14px;}
+                            .headStyle10f5gsgmoj .this-page {font-size: 12px;font-family:宋体;display:inline-block;height:14px;padding: 2px 4px; border: solid 1px #AFD5F5; background: #E1F0FD; font-weight: bold; color:black; MARGIN-RIGHT: 1px;line-height:14px;}
+                            .headStyle10f5gsgmoj a:hover {font-size: 12px;font-family:宋体;color: black; background: #EFF7FE; border-color: #AFD5F5; text-decoration: none;line-height:14px;}
+                            .headStyle10f5gsgmoj a:link {font-size: 12px;font-family:宋体;color: #000000; text-decoration: none;line-height:14px;}
+                            .headStyle10f5gsgmoj a:active { font-size: 12px;font-family:宋体;color: black; text-decoration: none; background: #EFF7FE; line-height:14px;}
+                        </style><script language="javascript" src="/system/resource/js/gotopage.js"></script><script type="text/javascript">function a125955_gopage_fun(){_simple_list_gotopage_fun(1,'a125955GOPAGE',2)}</script>
+                        <table width="100%" class="winstyle125955">
+
+                            <tr height="22">
+                                <td width="1" nowrap><span class="leaderfont125955">· </span></td>
+                                <td width="100%" style="font-size:9pt">
+
+
+                                    <a class="c125955" href="info/1046/1618.htm" target="_blank" title="招领信息-本校区崇文楼拾取到手表一块，品牌：ROSSINI罗西尼（金色表框、黑色腕带）">招领信息-本校区崇文楼拾取到手表一块，品牌：ROSSINI罗西尼（金色表框、黑色腕带）
+                                    </a>
+
+
+                                </td>
+                                <td width="1%" nowrap><span class="timestyle125955">2023/03/31&nbsp;</span></td>
+                                <td width="1%" nowrap></td>
+                            </tr>
+
+
+
+                            <tr><td colspan="3" align="center">
+                                <table cellpadding="0" cellspacing="0" border="0">
+                                    <TR><td colspan="0"><table cellspacing="0" class="headStyle10f5gsgmoj" width="100%" cellpadding="1"><tr valign="middle"><TD nowrap align="left" width="1%" id="fanye125955">共1条&nbsp;&nbsp;1/1&nbsp;</td><td nowrap align="left"><div><span class="PrevDisabled">首页</span><span class="PrevDisabled">上页</span><span class="NextDisabled">下页</span><span class="NextDisabled">尾页</span></div></td></tr></table>
+                                </table>
+                            </td></tr>
+                        </table>                       </TD></TR></TBODY></TABLE></TD></TR></TBODY></TABLE>
+<TABLE cellspacing="0" cellpadding="0" width="980" align="center" border="0">
+    <TBODY>
+    <TR>
+        <TD height="73" background="images/bqbj.jpg" align="center"><p>汉江师范学院-保卫处 &nbsp; &nbsp;电话:8583314 Copyright 2023 bw.xju. All Rights Reserved</p></TD></TR></TBODY></TABLE>
+</script>
 </html>
