--- a/src/main/resources/index/lostFound.html
+++ b/src/main/resources/index/lostFound.html
@@ -15,8 +15,8 @@
 
 
     </LINK><!--Announced by Visual SiteBuilder 9-->
-    <link rel="stylesheet" type="text/css" href="_sitegray/_sitegray_d.css" />
-    <script language="javascript" src="_sitegray/_sitegray.js"></script>
+    <link rel="stylesheet" type="text/css" href="static/lostFound.css" />
+    <script language="javascript" src="lostFound.js"></script>
     <!-- CustomerNO:77656262657232307668475153515742000200014152 -->
     <link rel="stylesheet" type="text/css" href="list.vsb.css" />
     <script type="text/javascript" src="/system/resource/js/counter.js"></script>
@@ -26,9 +26,8 @@
 <TABLE height="74" cellspacing="0" cellpadding="0" width="980" align="center" border="0">
     <TBODY>
     <TR>
-        <TD width="406" align="center">
-            <table border="0" cellspacing="0" cellpadding="0"><tr><td><a href="" title="保卫处" alt="网站LOGO"><img src="images/logo.png" border="0" alt="保卫处" title="保卫处"></a></td></tr></table></TD>
-        <TD background="images/top.jpg" width="574" align="center">
+        <TD width="100" align="center">
+            <table border="0" cellspacing="0" cellpadding="0"><tr><td><a href="" title="保卫处" alt="网站LOGO"><img src="/static/image/logo.jpg" border="0" alt="保卫处" title="保卫处"></a></td></tr></table></TD>
             <TABLE cellspacing="0" cellpadding="0" width="499" border="0">
                 <TBODY>
                 <TR>
