--- a/src/main/resources/index/question.html
+++ b/src/main/resources/index/question.html
@@ -27,14 +27,12 @@
 </nav>
 <main class="container">
     <h1 class="my-5 text-center">疑难解答</h1>
-
     <div class="p-3 mb-3 bg-light rounded row justify-content-center">
-        <button type="button" class="btn btn-outline-primary mx-2 mb-2 active" data-toggle="list" href="#all" role="tab" aria-controls="all">全部</button>
-        <button type="button" class="btn btn-outline-primary mx-2 mb-2 " data-toggle="list" href="#part-time" role="tab" aria-controls="part-time">问题</button>
-        <button type="button" class="btn btn-outline-primary mx-2 mb-2 " data-toggle="list" href="#tutor" role="tab" aria-controls="tutor">回答</button>
-        <button type="button" class="btn btn-outline-primary mx-2 mb-2 " data-toggle="list" href="#others" role="tab" aria-controls="others">其他</button>
+        <button type="button"  class="btn btn-outline-primary mx-2 mb-2 active" >全部</button>
+        <button type="button"  class="btn btn-outline-primary mx-2 mb-2 ">问题</button>
+        <button type="button" class="btn btn-outline-primary mx-2 mb-2 " >回答</button>
+        <button type="button" class="btn btn-outline-primary mx-2 mb-2 " >其他</button>
     </div>
-
     <div class="tab-content">
         <div class="tab-pane active" id="all" role="tabpanel" aria-labelledby="all-tab">
             <div class="card-columns">
@@ -43,7 +41,7 @@
                         <img src="/static/image/job1.jpg">
                     </a>
                     <div class="card-body">
-                        <h5 class="card-title"><a href="#">学习的意义</a></h5>
+                        <h5 class="card-title"><a href="q1.html">学习的意义</a></h5>
                         <p class="card-text">在于懂得思考</p>
                         <p class="card-text"><small class="text-muted">1</small> </p>
                     </div>
@@ -53,7 +51,7 @@
                         <img src="/static/image/job2.jpg">
                     </a>
                     <div class="card-body">
-                        <h5 class="card-title"><a href="#">sweater什么意思</a></h5>
+                        <h5 class="card-title"><a href="q2.html">sweater什么意思</a></h5>
                         <p class="card-text">毛衣</p>
                         <p class="card-text"><small class="text-muted">2</small> </p>
                     </div>
@@ -63,49 +61,13 @@
                         <img src="/static/image/job3.jpg">
                     </a>
                     <div class="card-body">
-                        <h5 class="card-title"><a href="#">royal什么意思</a></h5>
+                        <h5 class="card-title"><a href="q3.html">royal什么意思</a></h5>
                         <p class="card-text">高贵的</p>
                         <p class="card-text"><small class="text-muted">3</small> </p>
                     </div>
                 </div>
-                <div class="card">
-                    <a href="#">
-                        <img src="/static/image/job4.jpg">
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="#">tension什么意思</a></h5>
-                        <p class="card-text">紧张</p>
-                        <p class="card-text"><small class="text-muted">4</small> </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <a href="#">
-                        <img src="/static/image/job5.jpg">
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="#">passenger什么意思</a></h5>
-                        <p class="card-text">乘客</p>
-                        <p class="card-text"><small class="text-muted">5</small> </p>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="tab-pane" id="part-time" role="tabpanel" aria-labelledby="part-time-tab">
-            <div class="card-columns">
-
-                <div class="card">
-                    <a href="#">
-                        <img src="/static/image/job1.jpg">
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="#">scare什么意思</a></h5>
-                        <p class="card-text">吓唬</p>
-                        <p class="card-text"><small class="text-muted">6</small> </p>
-                    </div>
-                </div>
 </main>
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap,min.js"></script>
+<script src="js/jQuery-3.7.0.js"></script>
 </body>
 </html>
