--- a/src/main/resources/index/q2.html
+++ b/src/main/resources/index/q2.html
@@ -1,10 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>q2</title>
 </head>
-<body>
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    .wai{
+        width:150px;
+        margin: 50px auto;
+    }
+    p{
+        font-weight: 500;
+        width:150px;
+        height:100px;
+        line-height: 30px;/*当行高和边距相同时，文字水平居中	*/
+        border: 2px solid #999;/*	<p>标签的边框及样式	*/
+        margin: 1px;	/*	每个<p>标签设置外边距	*/
+        padding-left: 10px;/*	<p>左内边距为10px	*/
 
+    }
+</style>
+<body>
+<div class="wai">
+    <div>
+        <img src="/static/image/toxiang2.png">
+    </div>
+    <div>
+        <p>发布者id:yu</p>
+        <p>回答者id：chen</p>
+        <p>发布时间：2023.6.10</p>
+        <p>回答时间：2023.6.11</p>
+    </div>
+</div>
 </body>
 </html>
