--- a/src/main/resources/index/lostFound.html
+++ b/src/main/resources/index/lostFound.html
@@ -80,41 +80,8 @@
                     <p class="month">Jan</p>
                 </div>
                 <div class="list_wen fr">
-                    <a href="info/1095/1130.htm" class="tit">黑色钱宝一个，内有现金若干</a>
-                    <p>黑色钱宝一个，内有现金若干[<a href="info/1095/1130.htm">详细</a>]</p>
-                </div>
-            </li>
-
-            <li class="cleafix" id="line_u3_1">
-                <div class="list_time fl">
-                    <p class="day">3</p>
-                    <p class="month">Jan</p>
-                </div>
-                <div class="list_wen fr">
-                    <a href="info/1095/1129.htm" class="tit">黑色钱宝一个，内有现金若干</a>
-                    <p>黑色钱宝一个，内有现金若干[<a href="info/1095/1129.htm">详细</a>]</p>
-                </div>
-            </li>
-
-             <li class="cleafix" id="line_u3_2">
-                <div class="list_time fl">
-                    <p class="day">3</p>
-                    <p class="month">Jan</p>
-                </div>
-                <div class="list_wen fr">
-                    <a href="info/1095/1107.htm" class="tit">黑色钱宝一个，内有现金若干</a>
-                    <p>黑色钱宝一个，内有现金若干[<a href="info/1095/1107.htm">详细</a>]</p>
-                </div>
-            </li>
-
-            <li class="cleafix" id="line_u3_3">
-                <div class="list_time fl">
-                    <p class="day">3</p>
-                    <p class="month">Jan</p>
-                </div>
-                <div class="list_wen fr">
-                    <a href="info/1095/1106.htm" class="tit">黑色钱宝一个，内有现金若干</a>
-                    <p>黑色钱宝一个，内有现金若干[<a href="info/1095/1106.htm">详细</a>]</p>
+                    <a href="l1.html" class="tit">黑色钱宝一个，内有现金若干</a>
+                    <p>黑色钱宝一个，内有现金若干[<a href="l1.html">详细</a>]</p>
                 </div>
             </li>
 
@@ -124,43 +91,12 @@
                     <p class="month">Jan</p>
                 </div>
                 <div class="list_wen fr">
-                    <a href="info/1095/1132.htm" class="tit">u盘一个</a>
-                    <p>4G u盘一个，如图[<a href="info/1095/1132.htm">详细</a>]</p>
+                    <a href="l2.html" class="tit">u盘一个</a>
+                    <p>4G u盘一个，如图[<a href="l2.html">详细</a>]</p>
                 </div>
             </li>
 
-            <li class="cleafix" id="line_u3_5">
-                <div class="list_time fl">
-                    <p class="day">3</p>
-                    <p class="month">Jan</p>
-                </div>
-                <div class="list_wen fr">
-                    <a href="info/1095/1131.htm" class="tit">u盘一个</a>
-                    <p>4G u盘一个，如图[<a href="info/1095/1131.htm">详细</a>]</p>
-                </div>
-            </li>
 
-            <li class="cleafix" id="line_u3_6">
-                <div class="list_time fl">
-                    <p class="day">3</p>
-                    <p class="month">Jan</p>
-                </div>
-                <div class="list_wen fr">
-                    <a href="info/1095/1108.htm" class="tit">u盘一个</a>
-                    <p>4G u盘一个，如图[<a href="info/1095/1108.htm">详细</a>]</p>
-                </div>
-            </li>
-
-            <li class="cleafix" id="line_u3_7">
-                <div class="list_time fl">
-                    <p class="day">3</p>
-                    <p class="month">Jan</p>
-                </div>
-                <div class="list_wen fr">
-                    <a href="info/1095/1105.htm" class="tit">u盘一个</a>
-                    <p>4G u盘一个，如图[<a href="info/1095/1105.htm">详细</a>]</p>
-                </div>
-            </li>
 
             <li class="cleafix" id="line_u3_8">
                 <div class="list_time fl">
@@ -168,44 +104,13 @@
                     <p class="month">Dec</p>
                 </div>
                 <div class="list_wen fr">
-                    <a href="info/1095/1134.htm" class="tit">一只猫</a>
-                    <p>小奶猫一只[<a href="info/1095/1134.htm">详细</a>]</p>
+                    <a href="l3.html" class="tit">一只猫</a>
+                    <p>小奶猫一只[<a href="l3">详细</a>]</p>
                 </div>
             </li>
 
-            <li class="cleafix" id="line_u3_9">
-                <div class="list_time fl">
-                    <p class="day">28</p>
-                    <p class="month">Dec</p>
-                </div>
-                <div class="list_wen fr">
-                    <a href="info/1095/1133.htm" class="tit">一只猫</a>
-                    <p>小奶猫一只[<a href="info/1095/1133.htm">详细</a>]</p>
-                </div>
-            </li>
 
         </UL>
-            <div align="center"><INPUT TYPE="hidden" NAME="actiontype" VALUE=""><input type="hidden" name="_scode_" value="1578463634193"><input type="hidden" name="urltype" value="tree.TreeTempUrl"><input type="hidden" name="wbtreeid" value="1095"><input type="hidden" name="outFlag" value="false">
-                <style type="text/css">
-                    .headStyle1zdroyzz61, .headStyle1zdroyzz61 td, .headStyle1zdroyzz61 div {font-size: 12px;font-family:宋体; color: #000000; margin-left: auto; margin-right: auto; line-height:14px;}
-                    .defaultButtonStyle {font-size: 12px;font-family:宋体; height:20px;color: #000000;BORDER: #AFD5F5 1px solid; margin: 0px;padding: 0px; FILTER:progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=#ffffff, EndColorStr=#BDDBF7);  CURSOR: pointer; line-height:14px;background:-webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#BDDBF7));background: -moz-linear-gradient( top,#ffffff,#BDDBF7);background:-ms-linear-gradient(top,#ffffff 0%,#bddbf7 100%);}
-                    .defaultinputStyle {font-size: 12px;font-family:宋体; height:20px; border:1px solid #AFD5F5; line-height:14px;}
-                    .colHeader {font-size: 12px;font-family:宋体; line-height:14px;}
-                    .headStyle1zdroyzz61 a, .pageList .this-page {font-size: 12px;font-family:宋体; display:inline-block; height:14px; padding: 2px 4px; border: solid 1px #AFD5F5; background: #fff; text-decoration: none; MARGIN-RIGHT: 1px;line-height:14px;}
-                    .headStyle1zdroyzz61 a:visited {font-size: 12px;font-family:宋体; color: #000000; text-decoration: none; line-height:14px;}
-                    .headStyle1zdroyzz61 .PrevDisabled {font-size: 12px;font-family:宋体; display:inline-block;height:14px;  margin-right: 3px; padding: 2px 4px; background: #fff;color:#ccc;border: solid 1px #AFD5F5; line-height:14px;}
-                    .headStyle1zdroyzz61 .SelectList {font-size: 12px;font-family:宋体;line-height:14px;}
-                    .headStyle1zdroyzz61 .Prev { font-size: 12px;font-family:宋体; margin-right: 3px; padding: 2px 4px;line-height:14px;}
-                    .headStyle1zdroyzz61 .break {font-size: 12px;font-family:宋体; border: none; text-decoration: none; line-height:14px;}
-                    .headStyle1zdroyzz61 .NextDisabled { font-size: 12px;font-family:宋体;display:inline-block; height:14px; margin-left: 2px; padding: 2px 4px;background: #fff;color:#ccc;border: solid 1px #AFD5F5; line-height:14px;}
-                    .headStyle1zdroyzz61 .Next { font-size: 12px;font-family:宋体; margin-left: 2px; padding: 2px 4px;line-height:14px;}
-                    .headStyle1zdroyzz61 .this-page {font-size: 12px;font-family:宋体;display:inline-block;height:14px;padding: 2px 4px; border: solid 1px #AFD5F5; background: #E1F0FD; font-weight: bold; color:black; MARGIN-RIGHT: 1px;line-height:14px;}
-                    .headStyle1zdroyzz61 a:hover {font-size: 12px;font-family:宋体;color: black; background: #EFF7FE; border-color: #AFD5F5; text-decoration: none;line-height:14px;}
-                    .headStyle1zdroyzz61 a:link {font-size: 12px;font-family:宋体;color: #000000; text-decoration: none;line-height:14px;}
-                    .headStyle1zdroyzz61 a:active { font-size: 12px;font-family:宋体;color: black; text-decoration: none; background: #EFF7FE; line-height:14px;}
-                </style><script language="javascript" src="/system/resource/js/gotopage.js"></script><script type="text/javascript">function a202459_gopage_fun(){_simple_list_gotopage_fun(2,'a202459GOPAGE',2)}</script><table cellspacing="0" cellpadding="0" border="0"><TR><td colspan="0"><table cellspacing="0" class="headStyle1zdroyzz61" width="100%" cellpadding="1"><tr valign="middle"><TD nowrap align="left" width="1%" id="fanye202459">共12条&nbsp;&nbsp;1/2&nbsp;</td><td nowrap align="left"><div><span class="PrevDisabled">首页</span><span class="PrevDisabled">上页</span><a href="swzl/1.htm" class="Next">下页</a><a href="swzl/1.htm" class="Next">尾页</a>&nbsp;&nbsp;<input align="absmiddle" type="button" class="defaultButtonStyle" id="gotopagebut" name="a202459Find" value="转到" onclick="javascript:a202459_gopage_fun()"><INPUT size="2" align="absmiddle" class="defaultInputStyle" NAME="a202459GOPAGE" id="a202459GOPAGE" VALUE="" style="margin-left:1px;margin-right:1px">页</div></td></tr></table></table></div><script>_showDynClickBatch(['dynclicks_u3_1130','dynclicks_u3_1129','dynclicks_u3_1107','dynclicks_u3_1106','dynclicks_u3_1132','dynclicks_u3_1131','dynclicks_u3_1108','dynclicks_u3_1105','dynclicks_u3_1134','dynclicks_u3_1133'],[1130,1129,1107,1106,1132,1131,1108,1105,1134,1133],"wbnews", 1515140842)</script>
-
-        </div>
     </div>
 
 </div>
@@ -222,9 +127,8 @@
         </div>
     </div>
     <!--footThree-->
-    <div class="footThree"><!-- 版权内容请在本组件"内容配置-版权"处填写 -->
-        <p>南京市浦口区浦珠南路30号 南京工业大学团委</p><p>Copyright©2019&nbsp; 版权所有</p></div>
+
 </div>
-</body>
+ </body>
 <script src="js/jQuery-3.7.0.js"></script>
 </html>
